# GAMR

./: .gitignore  README.md  config.toml  log.txt  pyproject.toml  startup.py  workshop.ipynb
RoutingComparation/: config.toml  startup.py  startup_2.py  startup_3.py  startup_workshop.py  workshop.ipynb
RoutingComparation/common/: utils.py
RoutingComparation/dynamicsdn/: main.py  manualrouting.py  module_evole.py  multidomain_test.ipynb  rest_dynamicsdn.py  rest_dynamicsdn_dijkstra.py  routing.py  simplerouting.py  test.ipynb
RoutingComparation/extras/: test.ipynb  utils.py
RoutingComparation/mn_restapi/: mn_restapi_hook.py  mn_restapi_model.py  util.py
RoutingComparation/scenario/: config.toml  main.py  scenario_4s4h.py  temp.py
RoutingComparation/sdndb/: 20swOxford100Request.csv  20swOxford10Request.csv  20swOxford50Request.csv  Dijsktra20swOxford10Request.csv  GA25swOxford20Request.csv  GA25swOxford25Request.csv  GA25swOxford5_1Request.csv  MH25swOxford10Request.csv  MH25swOxford5Request.csv  crawler.py  read_data.ipynb  (+2 more)
poetry-venv11/: pyproject.toml  requirements.txt
poetry-venv9/: pyproject.toml
routingcomparasion/: config.toml  startup_multidomain.py
routingcomparison/: config.toml  log.txt  result\sec_solver\chinanet\4_edge_cloud_server.json  result\sec_solver\chinanet_4_edge_cloud_server.json  result\sec_solver\epoch_4_edge_cloud_server.json  startup.py  startup_2.py  startup_env7.py  startup_env9.py  startup_multidomain.py  startup_rework.py
workshop/: 234.py  STP_test.py  enable_stp.py  test.ipynb  test.json  test.py  workshop.ipynb
(+360 files in other folders)
