[tool.poetry]
name = "ryu-venv9"
version = "0.1.0"
description = ""
authors = ["meodaiduoi <meodaiduoi22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^69.2.0"
eventlet = "0.31.1"
greenlet = "3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
